--- a/FandF/Signin.html
+++ b/FandF/Signin.html
@@ -37,7 +37,7 @@
             <td><input type="password" name="password" id="password"></td>
         </tr>
         <tr>
-            <td colspan="2" align="center"><input type="submit" name="submit" id="submit"></td>
+            <td colspan="2" align="center"><input type="submit" name="Signin" id="Signin" value="Signin"></td>
         </tr>
 
     </table>
