--- a/FandF/Signup.html
+++ b/FandF/Signup.html
@@ -51,7 +51,7 @@
         <tr>
             <td colspan="2" align="center">
 
-                <input type="submit" name="submit" id="submit">
+                <input type="submit" name="SignUp" id="SignUp" value="SignUp">
             </td>
         </tr>
     </table>
